# fulfillment-optimization

./: .gitignore  CLAUDE.md  README.md  asdasd.csv  complete10node_rewards_seed=2.csv  complete10node_supplynodes_seed=2.csv  complete_demandnodes_seed=20.csv  complete_rewards_seed=20.csv  complete_supplynodes_seed=20.csv  data_driven_105.csv  data_driven_105_indepT5.csv  data_driven_105_indep_T10.csv  data_driven_105_markovT5.csv  data_driven_105_markov_T10.csv  data_driven_105_markovian.csv  data_driven_105_rwT5.csv  data_driven_109_indep.csv  data_driven_109_indep_2sm.csv  data_driven_109_markov.csv  data_driven_109_markov_de.csv  data_driven_109_markov_nn.csv  data_driven_109_rw.csv  flu_sp_test.csv  fulfillment_policy_table.csv  fulfillment_table.csv  generate_random_complete_graph.py  generate_random_longchain_graph.py  generate_random_starlike_graph.py  joint_sol_inventory_test.csv  joint_sol_inventory_test2.csv  joint_sol_inventory_test_3.csv  large_inventories.csv  longchain10node_demandnodes_seed=10.csv  longchain10node_rewards_seed=10.csv  longchain10node_supplynodes_seed=10.csv  longchain_demandnodes_seed=14.csv  longchain_rewards_seed=14.csv  longchain_supplynodes_seed=14.csv  new_resolve_test.csv  new_resolve_test_with_fix.csv  (+49 more)
Code/: Demand.py  Experiment.py  Fulfillment.py  FulfillmentOptimization.py  FulfillmentOptimization_backup.py  Graph.py  Inventory.py  LearningPolicy.py  MathPrograms.py  ModelBased.py  ModelFree.py  ModelFree_old.py  NNPolicy.py  complete_demandnodes_seed=2.csv  data_driven_plots.ipynb  experiments old.py  experiments.py  main.ipynb  (+13 more)
(+28 files in other folders)
